automate workflow with github actions

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,15 +1,16 @@
 cmake_minimum_required(VERSION 3.10)
 project(opencl_bench)
 
-set(CMAKE_CXX_STANDARD 17)      # Use C++17
+set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-set(OpenCL_INCLUDE_DIR "")
-set(OpenCL_LIBRARY "")
-
-
-include_directories(${OpenCL_INCLUDE_DIR})
+# Let CMake find OpenCL automatically
+find_package(OpenCL REQUIRED)
 
 add_executable(benchmark src/benchmark.cpp)
 
-target_link_libraries(benchmark ${OpenCL_LIBRARY})
+# Include OpenCL headers
+target_include_directories(benchmark PRIVATE ${OpenCL_INCLUDE_DIRS})
+
+# Link OpenCL library
+target_link_libraries(benchmark PRIVATE ${OpenCL_LIBRARIES})
