--- a/.github/workflows/benchmark.yml
+++ b/.github/workflows/benchmark.yml
@@ -13,34 +13,57 @@ jobs:
     - name: Checkout Repository
       uses: actions/checkout@v4
 
-    # ---- Install OpenCL CPU runtime and build tools ----
-    - name: Install OpenCL SDK and CMake
+    - name: Cache vcpkg
+      uses: actions/cache@v3
+      with:
+        path: C:/vcpkg/installed
+        key: vcpkg-${{ runner.os }}-${{ hashFiles('vcpkg.json') }}
+        restore-keys: |
+          vcpkg-${{ runner.os }}-
+
+    - name: Cache CMake build
+      uses: actions/cache@v3
+      with:
+        path: build
+        key: cmake-build-${{ runner.os }}-${{ github.sha }}
+        restore-keys: |
+          cmake-build-${{ runner.os }}-
+
+    - name: Cache Python packages
+      uses: actions/cache@v3
+      with:
+        path: |
+          ~/.cache/pip
+          ~/.virtualenvs
+        key: python-packages-${{ runner.os }}-${{ hashFiles('**/requirements.txt') }}
+        restore-keys: |
+          python-packages-${{ runner.os }}-
+
+    - name: Install CMake
+      run: choco install cmake --installargs 'ADD_CMAKE_TO_PATH=System' -y
+
+    - name: Install vcpkg
+      if: steps.cache-vcpkg.outputs.cache-hit != 'true'
       run: |
-        choco install opencl-sdk -y
-        choco install cmake --installargs 'ADD_CMAKE_TO_PATH=System' -y
+        git clone https://github.com/microsoft/vcpkg.git C:\vcpkg
+        C:\vcpkg\bootstrap-vcpkg.bat
+
+    - name: Install OpenCL via vcpkg
+      run: C:\vcpkg\vcpkg.exe install opencl:x64-windows
+
+    - name: Configure CMake with vcpkg toolchain
+      run: cmake -S . -B build -G "Visual Studio 17 2022" -A x64 -DCMAKE_TOOLCHAIN_FILE=C:/vcpkg/scripts/buildsystems/vcpkg.cmake
+
+    - name: Build Project
+      run: cmake --build build --config Release
 
     - name: Install Python dependencies
       run: |
-        pip install --upgrade pip
+        python -m pip install --upgrade pip
         pip install pyopencl numpy pandas matplotlib
 
-    # ---- Configure and build the C++ project ----
-    - name: Configure project (CMake with MSVC)
-      run: |
-        cmake -S . -B build -G "Visual Studio 17 2022" -A x64
-
-    - name: Build Release
-      run: |
-        cmake --build build --config Release
-
-    # ---- Run your Python benchmark automation ----
-    - name: Run Benchmark Script
-      run: |
-        python automation/benchmark.py 0
-
-    # ---- Upload benchmark results ----
-    - name: Upload Results
+    - name: Upload Build Artifacts
       uses: actions/upload-artifact@v4
       with:
-        name: windows-cpu-opencl-results
-        path: automation/
+        name: windows-cpu-opencl-build
+        path: build/Release/
